hw-03/kube-conf/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-health-dp
  labels:
    app: otus-health
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      appName: otus-health
  template:
    metadata:
      labels:
        appName: otus-health
    spec:
      containers:
        - name: otus-health-app
          image: jimbeam777/otus-health:0.0.1
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
