hw-03/kube-conf/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-health-svc
spec:
  selector:
    appName: otus-health
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
