hw-03/kube-conf/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-health-ing
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/[a-zA-Z]+/.*
            pathType: ImplementationSpecific
            backend:
              service:
                name: otus-health-svc
                port:
                  number: 80
          - path: /health
            pathType: Exact
            backend:
              service:
                name: otus-health-svc
                port:
                  number: 80
